--- a/smartmat/src/assets/style/weeklyMenu.css
+++ b/smartmat/src/assets/style/weeklyMenu.css
@@ -75,7 +75,7 @@ img {
 }
 #page{
     width: 100%;
-
+    padding-bottom: 30px;
 }
 
 .carousel__item {
